add CV and talks

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -12,22 +12,22 @@ main:
     url: /publications/
 
   - title: "Talks"
-    url: /talks/    
+    url: https://neurips.cc/virtual/2023/66630 #/talks/    
 
-  - title: "Teaching"
-    url: /teaching/    
+  # - title: "Teaching"
+    # url: /teaching/    
     
-  - title: "Portfolio"
-    url: /portfolio/
+  # - title: "Portfolio"
+  #   url: /portfolio/
         
-  - title: "Blog Posts"
-    url: /year-archive/
+  # - title: "Blog Posts"
+  #   url: /year-archive/
     
   - title: "CV"
-    url: /cv/
+    url: /files/daniil-vankov-cv-nov.pdf
     
   # - title: "CV"
   #   url: /cv-json/
     
-  - title: "Guide"
-    url: /markdown/
+  # - title: "Guide"
+  #   url: /markdown/
